[gd_scene load_steps=3 format=3 uid="uid://hy1yrayxjela"]

[ext_resource type="Script" uid="uid://dkui66qlklmdb" path="res://checksfinder/volume_container.gd" id="1_b1wpj"]
[ext_resource type="Script" uid="uid://cm0sxmcf7lc2t" path="res://checksfinder/volume_slider.gd" id="1_rt8sr"]

[node name="VolumeContainer" type="VBoxContainer" node_paths=PackedStringArray("label", "option_button", "volume_slider", "timer")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10
alignment = 1
script = ExtResource("1_b1wpj")
label = NodePath("Label")
option_button = NodePath("OptionButton")
volume_slider = NodePath("VolumeSlider")
timer = NodePath("Timer")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volume"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2
alignment = 1
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Master"
popup/item_0/id = 0
popup/item_1/text = "Sound Effects"
popup/item_1/id = 1
popup/item_2/text = "Music"
popup/item_2/id = 2

[node name="VolumeSlider" type="HSlider" parent="." node_paths=PackedStringArray("option_button", "timer")]
layout_mode = 2
max_value = 1.0
step = 0.01
script = ExtResource("1_rt8sr")
option_button = NodePath("../OptionButton")
timer = NodePath("../Timer")

[node name="Timer" type="Timer" parent="."]

[connection signal="item_selected" from="OptionButton" to="VolumeSlider" method="_on_option_button_item_selected"]
[connection signal="value_changed" from="VolumeSlider" to="VolumeSlider" method="_on_value_changed"]
[connection signal="timeout" from="Timer" to="VolumeSlider" method="_on_timer_timeout"]
